fixed particles going out of bounds a bit

--- a/resources/css/legato.css
+++ b/resources/css/legato.css
@@ -58,6 +58,7 @@ img#logo {
 }
 .pg-canvas{
 	width: 100%;
+	height: 100%;
 }
 
 .banner-head {
